--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,21 +4,21 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  // background-color: #0bd;
+  // background-blend-mode: hard-light;
 
-  .home-posi {
+  .home-content {
+    margin-top: 15%;
     text-align: center;
-    position: absolute;
-    left: 10vw;
-    top: 18vw;
 
-    .title {
+    .home-title {
       color: #009DAE;
       font-size: 3rem;
     }
 
     .btn-posi {
       display: inline-block;
-      padding-top: 5%;
+      padding-top: 3%;
     }
 
     .v-btn__content {
