--- a/src/styles/apps.scss
+++ b/src/styles/apps.scss
@@ -4,7 +4,17 @@
 }
 
 .apps {
+  margin-top: 12px;
   color: #71DFE7;
+}
+
+.apps-font {
+  color: rgba(0, 0, 0, 0.87);
+  margin: 30px 0;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.375rem;
+  letter-spacing: 0.0071428571em;
 }
 
 .app-card {
