--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -10,6 +10,9 @@
   .home-content {
     margin-top: 15%;
     text-align: center;
+    @media screen and (max-width: 767px) {
+      margin-top: 40%;
+    }
 
     .home-title {
       color: #009DAE;
